# nlp_lora

./: .gitignore  1_classification.py  README.md  cherch.jsonl  clf_tg_news.ipynb  cringe.jsonl  few-classif.ipynb  lstm_model.py  project_lora_by_danifeed.ipynb  pyproject.toml  requirements.txt  reviews.ipynb  reviews_3.ipynb  sherlock.jsonl  zero-shot-classif.ipynb
models/: model_lstm_weights.pt
models/log_reg_tg/: class_mapping.pkl  model_logreg.pkl  tfidf_vectorizer.pkl
models/lstm_tg/: model_lstm_full.pt  model_lstm_weights.pt  preprocessing_config.json  rnn_config.json  vocab_to_int.pkl  vocab_to_int_lstm.pkl
models/rubert_tiny_tg/: class_mapping.json  model_config.json  model_tg_weights.pt
pages/: 1_news_classification.py
streamlit/: app.py  requirements.txt  utils.py
streamlit/pages/: 1_Классификация_отзывов.py  1_классификация_отзывов.py  2_Классификация_новостей.py  3_LLM_и_LoRA.py
