[project]
name = "lora-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.46.1",
    "datasets>=4.6.0",
    "huggingface-hub>=1.5.0",
    "ipykernel>=7.2.0",
    "peft>=0.18.1",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "trl>=0.29.0",
]
