[project]
name = "lora-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.46.1",
    "datasets>=4.6.0",
    "huggingface-hub>=1.5.0",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "peft>=0.18.1",
    "pymorphy3>=2.0.6",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "trl>=0.29.0",
]

[tool.uv.workspace]
members = [
    "lora",
]
